--- a/index.html
+++ b/index.html
@@ -6,28 +6,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Web Page</title>
   <link rel="icon" href="./public/images/logo-icon.png">
+
+  <link rel="stylesheet" href="./public/css/main.css">
+  <link rel="stylesheet" href="./public/css/animations.css">
+  <link rel="stylesheet" href="./public/css/page-landing.css">
+  
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <header>
-    <img src="./public/images/logo.svg" alt="Logotipo Happy">
-    <div>
-      <strong>Rio de Janeiro</strong>
-      <p>Rio de Janeiro</p>
+  <div id="page-landing">
+    <div id="container">
+      <header>
+        <img 
+          class="animate-up"
+          id="logo" 
+          src="./public/images/logo.svg" 
+          alt="Logotipo Happy">
+
+        <div class="location animate-up">
+          <strong>Rio de Janeiro</strong>
+          <p>Rio de Janeiro</p>
+        </div>
+      </header>
+
+      <main>
+        <h1 class="animate-up">Leve a felicidade para o mundo</h1>
+
+        <section class="visit">
+          <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças</p>
+
+          <a class="animate-up" href="#" title="Visite Orfanatos">
+            <img src="./public/images/arrow.svg" alt="Ir para o mapa">
+          </a>
+        </section>
+      </main>
     </div>
-  </header>
-
-  <main>
-    <h1>Leve a felicidade para o mundo</h1>
-
-    <section>
-      <p>Visite orfanatos e mude o dia de muitas crianças</p>
-
-      <a href="#" title="Visite Orfanatos">
-        <img src="./public/images/arrow.svg" alt="Ir para o mapa">
-      </a>
-    </section>
-  </main>
+  </div>
 </body>
 
 </html>
