--- a/orphanage.html
+++ b/orphanage.html
@@ -26,9 +26,18 @@
 <body>
   
   <div id="page-orphanage">
-    <aside class="animate-right"></aside>
+    <aside class="animate-right">
 
-    <main>
+      <img src="./public/images/map-marker.svg" alt="Happy">
+      <footer>
+        <button onclick="history.back()" >
+          <img src="./public/images/arrow-back.svg" alt="Voltar">
+        </button>
+      </footer>
+      
+    </aside>
+
+    <main class="animate-appear">
       <div class="orphanage-details">
         <img src="./public/images/home.jpg" alt="Lar das meninas">
 
