adicionando estilo ao orphanage.html

--- a/orphanage.html
+++ b/orphanage.html
@@ -26,7 +26,7 @@
 <body>
   
   <div id="page-orphanage">
-    <aside class="animate-right">
+    <aside class="animate-right sidebar">
 
       <img src="./public/images/map-marker.svg" alt="Happy">
       <footer>
@@ -37,7 +37,7 @@
       
     </aside>
 
-    <main class="animate-appear">
+    <main class="animate-appear with-sidebar">
       <div class="orphanage-details">
         <img src="./public/images/home.jpg" alt="Lar das meninas">
 
