--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="./public/css/animations.css">
   <link rel="stylesheet" href="./public/css/sidebar.css">
   <link rel="stylesheet" href="./public/css/map.css">
+  <link rel="stylesheet" href="./public/css/form.css">
   <link rel="stylesheet" href="./public/css/page-create-orphanage.css">
   
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -60,6 +61,16 @@
             <input id="name" name="name">
           </div>
           
+          <div class="input-block">
+            <label for="about">Sobre</label>
+            <textarea id="about" name="about"></textarea>
+          </div>
+          
+          <div class="input-block">
+            <label for="whatsapp">Número de WhatsApp</label>
+            <input id="whatsapp" name="whatsapp">
+          </div>
+
         </fieldset>
 
         <fieldset>
