--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -71,6 +71,17 @@
             <input id="whatsapp" name="whatsapp">
           </div>
 
+          <div class="input-block images">
+            <label for="images">Foto</label>
+
+            <div class="images-upload" id="images">
+              <input name="images" placeholder="Cole o link da foto aqui">
+            </div>
+            <button type="button">
+              <img src="./public/images/add-file.svg" alt="Nova Imagem">
+            </button>
+          </div>
+
         </fieldset>
 
         <fieldset>
