--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -86,6 +86,32 @@
 
         <fieldset>
           <legend>Visitação</legend>
+
+          <div class="input-block">
+            <label for="instructions">Instruções</label>
+            <textarea id="instructions" name="instructions"></textarea>
+          </div>
+
+          <div class="input-block">
+            <label for="opening_hours">Horário das visitas</label>
+            <input id="opening_hours" name="opening_hours">
+          </div>
+
+          <div class="input-block">
+
+            <label for="open_on_weekends">Atende fim de semana?</label>
+            <input type="hidden" id="open_on_weekends" name="open_on_weekends" value="1">
+
+            <div class="button-select">
+              <button type="button" class="active">Sim</button>
+              <button type="button">Não</button>
+            </div>
+
+            <button type="submit" class="primary-button">
+              Confirmar
+            </button>
+            
+          </div>
         </fieldset>
       </form>
             
