--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -49,6 +49,8 @@
 
           <div class="map-container">
             <div id="mapid"></div>
+            <input type="hidden" name="lat">
+            <input type="hidden" name="lng">
 
             <footer>
               <a href="" id="select-point">
