regra para adicionar fotos no cadastro

--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -88,7 +88,7 @@
               
             </div>
             
-            <button type="button">
+            <button onclick="addPhotoField()" type="button">
               <img src="./public/images/add-file.svg" alt="Nova Imagem">
             </button>
           </div>
