--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -80,8 +80,12 @@
             <div class="images-upload" id="images">
 
               <div class="new-upload">
-                <input name="images" placeholder="Cole o link da foto aqui" required>
-                <span>
+                <input 
+                  name="images" 
+                  placeholder="Cole o link da foto aqui" 
+                  required
+                />
+                <span onclick="deleteField(event)">
                   <img src="./public/images/remove-file.svg" alt="Remover foto">
                 </span>
               </div>
